--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@ deploy:
 使用`npm install hexo --no-optional`更新Hexo解决
 
 
+----
 
-### 3 部署到github后无法加载css和js
+
+#### 3 部署到github后无法加载css和js
 
 路径错误，在`_config.yml`中
 <pre>
