--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ deploy:
   type: git
   message: [message]
   repo: 
-    github: <repository url="">,[branch]
-    gitcafe: <repository url="">,[branch]
+    github: \<repository url\="">,[branch]
+    gitcafe: \<repository url\="">,[branch]
 </repository></repository></pre>
 
 
