--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@ deploy:
   type: git
   message: [message]
   repo: 
-    github: \<repository url\="">,[branch]
-    gitcafe: \<repository url\="">,[branch]
-</repository></repository></pre>
+    github: repository_url,[branch]
+    gitcafe: repository_url>,[branch]
+</pre>
 
 
 
