--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ deploy:
   message: [message]
   repo: 
     github: repository_url,[branch]
-    gitcafe: repository_url>,[branch]
+    gitcafe: repository_url,[branch]
 </pre>
 
 
