--- a/index.html
+++ b/index.html
@@ -158,18 +158,7 @@
 <p><a href="hexo.io">hexo</a>是一个静态博客框架，可以使用MarkDown写作然后方便地生成静态博客，<a href="https://hexo.io/zh-cn/docs/" target="_blank" rel="external">部署的方式</a>在官方其实已经很详细，网上也有很有详细的教程，这里主要记录一下部署过程遇到的坑。</p>
 <h4 id="1_Error:_Deployer_not_found_:_git">1 Error: Deployer not found : git</h4><p>执行<code>$ hexo deploy</code> 遇到<code>Error: Deployer not found : git</code>的错误，原因是没有安装deployer插件。</p>
 <p>先执行<code>rm -rf .deploy_git</code>移除该插件现有的安装，然后<code>npm install hexo-deployer-git --save</code>安装插件。</p>
-<p>记得修改<code>_config.yml</code>文件的<code>deploy:</code>部分为：</p>
-<pre>
-deploy:
-  type: git
-  message: [message]
-  repo: 
-    github: repository_url,[branch]
-    gitcafe: repository_url,[branch]
-</pre>
-
-
-
+<p>记得修改<code>_config.yml</code>文件的<code>deploy:</code>部分为：<br><figure class="highlight plain"><table><tr><td class="gutter"><pre><span class="line">1</span><br></pre></td><td class="code"><pre><span class="line">deploy:&#10;  type: git&#10;  message: [message]&#10;  repo: &#10;    github: repository_url,[branch]&#10;    gitcafe: repository_url,[branch]</span><br></pre></td></tr></table></figure></p>
 <h4 id="2_部署到github后无法加载css和js">2 部署到github后无法加载css和js</h4><p>路径错误，在<code>_config.yml</code>中</p>
 <pre>
 url: http://pheynix.github.io
