--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   
-  <title>About | Pheynix的脚印</title>
+  <title>About | Pheynix&#39;s footprint</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="一只有追求的野生安卓程序猿
 现居深圳
@@ -12,7 +12,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="About">
 <meta property="og:url" content="http://pheynix.github.io/about/index.html">
-<meta property="og:site_name" content="Pheynix的脚印">
+<meta property="og:site_name" content="Pheynix's footprint">
 <meta property="og:description" content="一只有追求的野生安卓程序猿
 现居深圳
 在创业公司独自负责安卓应用的开发
@@ -46,7 +46,7 @@
     <header id="header">
   <div id="header-main" class="header-inner">
     <div class="outer">
-      <a href="/" id="logo"><span class="site-title">Pheynix的脚印</span></a>
+      <a href="/" id="logo"><span class="site-title">Pheynix&#39;s footprint</span></a>
       <nav id="main-nav">
         
           <a class="main-nav-link" href="/.">Home</a>
