--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <figure class="highlight plain"><table><tr><td class="gutter"><pre><span class="line">1</span><br></pre></td><td class="code"><pre><span class="line">&#60;style name=&#34;tabLayoutStyle&#34; parent=&#34;Widget.Design.TabLayout&#34;&#62;&#10;    &#60;item name=&#34;android:layout_width&#34;&#62;match_parent&#60;/item&#62;&#10;    &#60;item name=&#34;android:layout_height&#34;&#62;wrap_content&#60;/item&#62;&#10;    &#60;item name=&#34;android:theme&#34;&#62;@style/ThemeOverlay.AppCompat.Dark&#60;/item&#62;&#10;    &#60;item name=&#34;tabBackground&#34;&#62;?attr/colorPrimary&#60;/item&#62;&#10;    &#60;item name=&#34;tabIndicatorColor&#34;&#62;@android:color/white&#60;/item&#62;&#10;    &#60;item name=&#34;tabMode&#34;&#62;scrollable&#60;/item&#62;&#10;&#60;/style&#62;</span><br></pre></td></tr></table></figure>
 <h4 id="2_使用PreferenceFragment生成设置属性页面">2 使用PreferenceFragment生成设置属性页面</h4><p>新建<code>Fragment extends PreferenceFragment</code>, 然后新建在res文件夹下面新建xml文件夹，在其中新建这个fragment的布局文件。</p>
 <p>布局文件内部可以放<code>PreferenceCategory</code> <code>CheckBoxPreference</code> <code>ListPreference</code> <code>EditTextPreference</code> 这些view，非常方便可以生成Preference页面，<a href="http://developer.android.com/reference/android/preference/PreferenceFragment.html" target="_blank" rel="external">文档</a>非常详细～</p>
-<p><img src="demo" alt="https://github.com/pheynix/pheynix.github.io/raw/master/css/images/asset/purify_zhihu/purify_prefs.png"></p>
+<p><img src="https://github.com/pheynix/pheynix.github.io/raw/master/css/images/asset/purify_zhihu/purify_prefs.png" alt="demo"></p>
 
       
     </div>
