--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="article-entry" itemprop="articleBody">
       
                 
-        <p>很多时候，限于项目进度要求和避免重复造轮子的浪费，或多或少会使用到开源项目，怎么快速挑选、使用恰当的开源项目很大程度影响项目日后的开发。</p>
+        <p>很多时候，限于项目进度要求和避免重复造轮子的浪费，或多或少会使用到开源项目，怎么快速挑选、使用恰当的开源项目很大程度影响项目日后的开发.</p>
 <h4 id="收集、选择现有能满足需求的项目框架">收集、选择现有能满足需求的项目框架</h4><p>例如网络访问框架，使用“android网络请求框架”和“android network”等关键词进行搜索之后就可以大致得到当下流行的一些网络请求框架：</p>
 <ul>
 <li><a href="https://github.com/square/retrofit" target="_blank" rel="external">Retrofit</a></li>
